portfolio spacing  issue fixed

--- a/src/themes/reen/style.css
+++ b/src/themes/reen/style.css
@@ -13352,11 +13352,9 @@ p a.txt-btn {
   padding-top: 40px;
   padding-bottom: 40px; }
 
-.portfolio-post-carousel {
-  margin-bottom: 14px; }
-  .portfolio-post-carousel.owl-carousel .owl-nav button.owl-prev i,
-  .portfolio-post-carousel.owl-carousel .owl-nav button.owl-next i {
-    font-size: 45px !important; }
+.portfolio-post-carousel.owl-carousel .owl-nav button.owl-prev i,
+.portfolio-post-carousel.owl-carousel .owl-nav button.owl-next i {
+  font-size: 45px !important; }
 
 .dropdown.searchbox .menu-text {
   display: none; }
